aula sobre ancora

--- a/documento/documento.html
+++ b/documento/documento.html
@@ -13,8 +13,11 @@
 </head>
 <body>
     <h1>Página Documento</h1>
-    <a href="../exemplo3.html">Voltar Página</a>
     <img src="https://static6.depositphotos.com/1138869/647/i/600/depositphotos_6479121-stock-photo-businessman-hand-make-thumbs-up.jpg" alt="Legal">
+    <br>
+    <a href="../exemplo3.html">Voltar Página</a>
+    <br>
+    <a href="../sobre/sobre.html">Ir para sobre</a>
     
 </body>
 </html>
