--- a/sobre/sobre.html
+++ b/sobre/sobre.html
@@ -14,5 +14,7 @@
 <body>
     <h1>Página Sobre</h1>
     <a href="../exemplo3.html">Voltar Página</a>
+    <br>
+    <a href="../documento/documento.html">Ir para documento</a>
 </body>
 </html>
