--- a/exemplo3.html
+++ b/exemplo3.html
@@ -10,6 +10,11 @@
     body{background-color:aqua;}
     h1{color:crimson; text-align: center; font-family: arial;}
     img{width: 200px;}
+    a{color:blue; text-decoration: none; }
+    /* PSEUDOCLASSES */
+    a:visited{color: black;} /* quando acessou o link uma vez (so para link), (SEMPRE EM CIMA DO HOVER"ELE É FRESCO")*/
+    a:hover{color:chocolate; text-decoration: underline;} /* a pseudo classe hover permite altrar a formatação quando passamos o cursor em cima do elemento */
+    a:active{background-color: aqua;} /* Quando você clica no elemento */
 
 </style>
 
@@ -24,9 +29,9 @@
 
     <h1>Trabalhando com Links</h1>
 
-    <a href="http://www.google.com" target="_blank">clique aqui para ir ao google</a>
+    <a href="http://www.google.com" target="_blank">Clique aqui para ir ao google</a>
     <br>
-    <a href="http://www.google.com" target="_blank">clique aqui para ir ao google</a>
+    <a href="http://www.google.com" target="_blank">Clique aqui para ir ao google</a>
     <br>
     <a href="documento/documento.html" target="_blank">Documento</a>
     <br>
